# django-mptt

./: README.md  db.sqlite3  manage.py  pyproject.toml
family_tree/: admin.py  models.py  views.py
family_tree/migrations/: 0001_initial.py
treedata_config/: asgi.py  settings.py  urls.py  wsgi.py
