[tool.poetry]
name = "mptt_django"
version = "0.1.0"
description = "Hierarchical Data for Django Databases"
authors = ["Kathryn Anderson <kat42272@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django-mptt = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
